@@ -1,52 +1,37 @@
 Allows you to check interface states.
-
 .TP
-.BI "--iface " "interface"
-Check the states on "interface". Required.
+\fB\-\-iface\fP \fIname\fP
+Check the states on the given interface. This option is required.
 .TP
-.B [!] --up
+[\fB!\fP] \fB\-\-up\fP, [\fB!\fP] \fB\-\-down\fP
 Check the UP flag.
 .TP
-.B [!] --down
-Not --up.
-.TP
-.B "[!] --broadcast"
+[\fB!\fP] \fB\-\-broadcast\fP
 Check the BROADCAST flag.
 .TP
-.B "[!] --loopback"
+[\fB!\fP] \fB\-\-loopback\fP
 Check the LOOPBACK flag.
 .TP
-.B "[!] --pointopoint"
-Check the POINTOPOINT flag.
+[\fB!\fP] \fB\-\-pointtopoint\fP
+Check the POINTTOPOINT flag.
 .TP
-.B "[!] --pointtopoint"
-Same as --pointopoint.
+[\fB!\fP] \fB\-\-running\fP
+Check the RUNNING flag. Do NOT rely on it!
 .TP
-.B [!] --running
-Check the RUNNING flag. Do NOT relay on it!
-.TP
-.B [!] --noarp
+[\fB!\fP] \fB\-\-noarp\fP, [\fB!\fP] \fB\-\-arp\fP
 Check the NOARP flag.
 .TP
-.B [!] --arp
-Not --noarp.
-.TP
-.B [!] --promisc
+[\fB!\fP] \fB\-\-promisc\fP
 Check the PROMISC flag.
 .TP
-.B [!] --promiscous
-Same as --promisc.
-.TP
-.B [!] --multicast
+[\fB!\fP] \fB\-\-multicast\fP
 Check the MULTICAST flag.
 .TP
-.B [!] --dynamic
+[\fB!\fP] \fB\-\-dynamic\fP
 Check the DYNAMIC flag.
 .TP
-.B [!] --lower_up
+[\fB!\fP] \fB\-\-lower-up\fP
 Check the LOWER_UP flag.
 .TP
-.B [!] --dormant
+[\fB!\fP] \fB\-\-dormant\fP
 Check the DORMANT flag.
-
-For more information see the \fIif.h\fP header file in the kernel source.
